[gd_scene load_steps=12 format=2]

[ext_resource path="res://CODE/ENEMIES/NEUTRAL/NeutralSlime.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/ENEMIES/neutral enemy/slimeAnimations.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.1962, 12.0662 )

[sub_resource type="Animation" id=2]
resource_name = "crawl"
length = 0.75
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428572, 0.5, 0.571429, 0.642857 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 48 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=4]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.75, 13.125 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.8795, 21.9231 )

[sub_resource type="GDScript" id=9]
script/source = "extends Area2D


func _ready():
	pass
"

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 249.143, 70.1847 )

[node name="NeutralSlime" type="KinematicBody2D"]
collision_layer = 2147483664
collision_mask = 2147483651
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.02171, 44.7684 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 18, -8 )
texture = ExtResource( 2 )
vframes = 9
hframes = 6
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crawl = SubResource( 2 )
anims/death = SubResource( 8 )
anims/run = SubResource( 3 )
anims/transform = SubResource( 4 )

[node name="RayCast2DPit" type="RayCast2D" parent="."]
position = Vector2( -25.6719, 56.8684 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="RayCast2DWall" type="RayCast2D" parent="."]
position = Vector2( -24.2163, 56.541 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( -1.5, 43.625 )
shape = SubResource( 5 )

[node name="attackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackBox"]
position = Vector2( -39.9898, 34.8819 )
shape = SubResource( 6 )

[node name="sight" type="Area2D" parent="."]
script = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
position = Vector2( 0, -12 )
shape = SubResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="body_entered" from="attackBox" to="." method="_on_attackBox_body_entered"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
